[Feat] 登录及退出逻辑处理

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@heroui/avatar": "^2.2.20",
     "@heroui/button": "2.2.24",
     "@heroui/code": "2.2.18",
     "@heroui/input": "2.4.25",
@@ -17,6 +18,7 @@
     "@heroui/link": "2.2.21",
     "@heroui/listbox": "2.3.23",
     "@heroui/navbar": "2.2.22",
+    "@heroui/popover": "^2.3.24",
     "@heroui/snippet": "2.2.25",
     "@heroui/switch": "2.2.22",
     "@heroui/system": "2.4.20",
