--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
