[Feat] create schema

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@heroui/avatar": "^2.2.20",
     "@heroui/button": "2.2.24",
+    "@heroui/chip": "^2.2.20",
     "@heroui/code": "2.2.18",
     "@heroui/input": "2.4.25",
     "@heroui/kbd": "2.2.19",
