--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@heroui/avatar": "^2.2.20",
+    "@heroui/badge": "^2.2.15",
     "@heroui/button": "2.2.24",
     "@heroui/chip": "^2.2.20",
     "@heroui/code": "2.2.18",
