--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroui/listbox": "2.3.23",
     "@heroui/navbar": "2.2.22",
     "@heroui/popover": "^2.3.24",
+    "@heroui/skeleton": "^2.2.16",
     "@heroui/snippet": "2.2.25",
     "@heroui/switch": "2.2.22",
     "@heroui/system": "2.4.20",
@@ -29,6 +30,7 @@
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.26",
     "clsx": "2.1.1",
+    "dayjs": "^1.11.18",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "next": "15.3.1",
